--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p th:text="|Hello, ${name}!|" />
+    <p th:text="|HelloEveryone, ${name}!|" />
     <p th:text="|${nowdate}|" />
 </body>
 </html>
